--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django==3.0.7
-django-debug-toolbar==2.2
-django-grappelli==2.14.2
-djangorestframework==3.11.1
+Django==3.1
+django-debug-toolbar==3.2.1
+django-grappelli==2.14.4
+djangorestframework==3.12.4
+django-jazzmin==2.4.6
