--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Django==3.1
-django-debug-toolbar==3.2.1
-django-grappelli==2.14.4
+Django==3.2.9
+django-debug-toolbar==3.2.2
 djangorestframework==3.12.4
-django-jazzmin==2.4.6
-django-leaflet==0.27.1
-django-geojson==3.1.0
+django-jazzmin==2.4.8
+django-leaflet==0.28.2
+django-geojson==3.2.0
+django-treebeard==4.5.1
+django-markdownfield==0.10.0
+Pillow==8.4.0
