--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,13 @@ jsonfield==3.1.0
 django-json-widget==1.1.1
 pandas==1.3.4
 numpy==1.21.4
-
 Markdown~=3.3.4
 requests~=2.25.1
+Sphinx==3.5.4
+sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
