--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,51 @@
-Django==3.2.9
-django-debug-toolbar==3.2.2
-djangorestframework==3.12.4
-django-jazzmin==2.4.8
-django-leaflet==0.28.2
+alabaster==0.7.12
+asgiref==3.5.0
+Babel==2.9.1
+backports.zoneinfo==0.2.1
+bleach==4.1.0
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.10
+coreapi==2.3.3
+coreschema==0.0.4
+Django==4.0.1
+django-debug-toolbar==3.2.4
 django-geojson==3.2.0
-django-treebeard==4.5.1
-django-markdownfield==0.10.0
-Pillow==8.4.0
-drf-yasg==1.20.0
-jsonfield==3.1.0
+django-jazzmin==2.4.9
 django-json-widget==1.1.1
-pandas==1.3.4
-numpy==1.21.4
-Markdown~=3.3.4
-requests~=2.25.1
-Sphinx==3.5.4
-sphinx-rtd-theme==0.5.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
+django-leaflet==0.28.2
+django-markdownfield==0.10.0
+django-treebeard==4.5.1
+djangorestframework==3.13.1
+docutils==0.18.1
+drf-yasg==1.20.0
+future==0.18.2
+idna==3.3
+imagesize==1.3.0
+importlib-metadata==4.10.1
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.0.3
+jsonfield==3.1.0
+Markdown==3.3.6
+MarkupSafe==2.0.1
+numpy==1.21.5
+packaging==21.3
+pandas==1.3.5
+Pillow==9.0.0
+Pygments==2.11.2
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.27.1
+ruamel.yaml==0.17.20
+ruamel.yaml.clib==0.2.6
+shortuuid==1.0.8
+six==1.16.0
+snowballstemmer==2.2.0
+sqlparse==0.4.2
+typing_extensions==4.0.1
+uritemplate==4.1.1
+urllib3==1.26.8
+webencodings==0.5.1
+zipp==3.7.0
