PCAF Mortgage Methodology (Emission Factors) - introduce building / project assets - introduce borrower - introduce building emission factors

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ django-jazzmin
 django-json-widget
 django-leaflet
 django-markdownfield
+django-countries
 django-treebeard
+django-import-export
 djangorestframework
 drf-yasg
 jsonfield
