added django-extensions dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,5 @@ django-treebeard
 django-import-export
 django-prettyjson
 django-countries
-django-debug-toolbar
 behave-django
+django-extensions
