basic EECS data models

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = equinox
-version = 0.3
+version = 0.7
 description = Equinox is an open source platform that supports the holistic risk management of sustainable finance projects.
 long_description = file: README.md
-url = http://www.equinoxpoint.org/
+url = https://www.openriskmanagement.com/equinox/
 author = Open Risk
 author_email = info@openrisk.eu
 license = Apache
