--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,12 @@ version: 2
 build:
   os: ubuntu-22.04
   apt_packages:
-    - gdal
+    - gdal-bin
+    - proj-bin
+    - libgdal-dev
+    - libproj-dev
+    - spatialite-bin
+    - libsqlite3-mod-spatialite
   tools:
     python: "3.10"
     # You can also specify other tool versions:
