--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,32 @@
-Django
-djangorestframework
+Django~=5.0.6
+djangorestframework~=3.15.1
 drf-yasg
-numpy
-pandas
-scipy
+numpy~=1.26.4
+pandas~=2.2.2
+scipy~=1.13.0
 jsonfield
-Markdown
+Markdown~=3.6
 Pillow
 django-leaflet
 django-jazzmin
 django-json-widget
 django-markdownfield
-django-treebeard
+django-treebeard~=4.7.1
 django-import-export
 django-prettyjson
 django-countries
+django-pwa
 django-extensions
 django-htmx
-django-debug-toolbar
+django-debug-toolbar~=4.3.0
 psycopg2
 Sphinx
 sphinx-rtd-theme
-selenium
+selenium~=4.18.1
 behave-django
-pytest
+pytest~=8.0.1
 pytest-bdd
 coverage
+requests~=2.31.0
+behave~=1.2.6
+setuptools~=69.5.1
