--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-import-export
 django-prettyjson
 django-countries
 django-extensions
+django-jsoneditor
 django-htmx
 django-debug-toolbar~=4.3.0
 psycopg2
@@ -26,6 +27,6 @@ behave-django
 pytest~=8.0.1
 pytest-bdd
 coverage
-requests~=2.32.0
+requests~=2.31.0
 behave~=1.2.6
 setuptools~=69.5.1
