--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-Django~=5.0.6
-djangorestframework~=3.15.1
+Django
+djangorestframework
 drf-yasg
-numpy~=1.26.4
-pandas~=2.2.2
-scipy~=1.13.0
+numpy
+pandas
+scipy
 jsonfield
-Markdown~=3.6
+Markdown
 Pillow
 django-leaflet
 django-jazzmin
 django-json-widget
 django-markdownfield
-django-treebeard~=4.7.1
+django-treebeard
 django-import-export
 django-prettyjson
 django-countries
 django-extensions
 django-jsoneditor
 django-htmx
-django-debug-toolbar~=4.3.0
+django-debug-toolbar
 psycopg2
 Sphinx
 sphinx-rtd-theme
-selenium~=4.18.1
+selenium
 behave-django
-pytest~=8.0.1
+pytest
 pytest-bdd
 coverage
-requests~=2.31.0
-behave~=1.2.6
-setuptools~=69.5.1
+requests
+behave
+setuptools
