split policy settings by use case; tweak django CI

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,6 +27,7 @@ jobs:
         pip install -r requirements.txt
     - name: Install Linux Dependencies
       run: |
+        sudo apt-get update
         sudo apt-get -y install gdal-bin
         sudo apt-get -y install libgdal-dev
         sudo apt-get -y install spatialite-bin
