--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Equinox is an open source platform that supports the holistic risk
 long_description = file: README.md
 url = https://www.openriskmanagement.com/equinox/
 author = Open Risk
-author_email = info@openrisk.eu
+author_email = info@openriskmanagement.com
 license = Apache
 classifiers =
     Environment :: Web Environment
