--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "equinox"
 version = "0.8"
 description = ""
-authors = ["Open Risk <info@openrisk.eu>"]
+authors = ["Open Risk <info@openriskmanagement.com>"]
 readme = "README.md"
 packages = [{include = "poetry_demo"}]
 
